fix(animations): make sure uncover animation initially covers entire block

--- a/src/client/components/app-core/animations.css
+++ b/src/client/components/app-core/animations.css
@@ -66,6 +66,7 @@
   =================== uncover
 */
 .is-animated .animation__uncover {
+  display: inline-block;
   position: relative;
   animation-delay: var(--animation-delay);
 }
